--- a/src/components/local/organisms/carousel/carousel.module.scss
+++ b/src/components/local/organisms/carousel/carousel.module.scss
@@ -56,7 +56,7 @@
 .carousel__project {
   min-height: 225px;
 
-  p:first-child {
+  h4 {
     border-bottom: black solid 3px;
     padding-bottom: 5px;
     margin-bottom: 10px;
